--- a/postcodes/requirements.txt
+++ b/postcodes/requirements.txt
@@ -11,6 +11,7 @@ multidict==6.0.2
 packaging==21.3
 pika==1.2.1
 pluggy==1.0.0
+psutil==5.9.1
 py==1.11.0
 pyparsing==3.0.9
 pytest==7.1.2
@@ -18,4 +19,5 @@ python-decouple==3.6
 requests==2.27.1
 tomli==2.0.1
 urllib3==1.26.9
+uvloop==0.16.0
 yarl==1.7.2
